Added the ability to disable filters

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,6 +16,7 @@
 @import './base/sidebar';
 @import './base/def-slider';
 @import './base/default-card';
+@import './base/filters';
 @import './corporative/deposits';
 @import './corporative/credits';
 @import './corporative/operations';
