--- a/src/assets/scss/utils/margin-util-preset.scss
+++ b/src/assets/scss/utils/margin-util-preset.scss
@@ -13,6 +13,28 @@
 		margin-top: 0;
 	}
 
+	&--5{
+		margin: 5px;
+	}
+	&--10{
+		margin: 10px;
+	}
+	&--15{
+		margin: 15px;
+	}
+	&--25{
+		margin: 25px;
+	}
+	&--35{
+		margin: 35px;
+	}
+	&--45{
+		margin: 45px;
+	}
+	&--75{
+		margin: 75px;
+	}
+	
 	&--l-5{
 		margin-left: 5px;
 	}
