--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -126,6 +126,10 @@
     margin-bottom: 140px;
     @media screen and (max-width:992px){
       flex-direction: column;
+      margin-bottom: 110px;
+    }
+    @media screen and (max-width:575px){
+      margin-bottom: 80px;
     }
 }
 .about-card {
@@ -230,3 +234,310 @@
                   }
             }
 }
+
+// Management elements
+
+.management {
+}
+.management-wrap {
+      padding: 35px 30px 60px;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 5px;
+      margin-bottom: 150px;
+      @media screen and (max-width:992px){
+            margin-bottom: 140px;
+      }
+      @media screen and (max-width: 575px){
+            margin-bottom: 85px;
+      }
+}
+.management-title {
+      font-family: 'Helvetica';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 30px;
+      line-height: 34px;
+      color: #011C4F;
+      margin-right: 70px;
+      @media screen and (max-width:575px){
+            margin-right: 15px;
+      }
+
+            &__wrapper{
+                  display: flex;
+                  align-items: center;
+                  flex-direction: row;
+                  margin-bottom: 45px;
+            }
+
+            &__wrap{
+                  display: flex;
+                  justify-content: space-between;
+                  
+            }
+}
+.management-decor {
+      height: 0;
+      flex-grow: 1;
+}
+.management-person {
+      display: flex;
+      flex: 0 0 20%;
+      flex-direction: row;
+      align-items: center;
+      @media screen and (max-width:992px){
+            flex: 0 0 45%;
+      }
+
+            // .management-person__wrap
+
+		&__wrap {
+                  display: flex;
+                  flex-direction: row;
+                  align-items: center;
+                  justify-content: space-around;
+                  flex-wrap: wrap;
+                  margin-bottom: 60px;
+                  @media screen and (max-width:992px){
+                        row-gap: 80px;
+                  }
+                  @media screen and (max-width:575px){
+                        flex-direction: column;
+                  }
+		}
+
+		// .management-person__img
+
+		&__img {
+                  position: relative;
+                  overflow: hidden;
+                  flex: 0 0 112px;
+                  height: 112px;
+                  margin-right: 15px;
+                  border: 2px solid;
+                  border-radius: 50%;
+            }
+		// .management-person__name
+
+		&__name {
+                  width: min-content;
+                  word-spacing: 1000px;
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 20px;
+                  line-height: 23px;
+                  background: linear-gradient(274.25deg, #00205B -9.03%, #00A3E0 138.82%);
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;
+                  background-clip: text;
+                  text-fill-color: transparent;
+		}
+}
+.border-gradient{
+      border-bottom: 2px solid;
+      border-image-slice: 1;
+}
+.border-color-gradient{
+      border-image-source: linear-gradient(273.98deg, #00205B 6.51%, #00A3E0 100%);
+}
+
+
+// News elements
+
+.news {
+}
+.news-wrap {
+      margin-bottom: 150px;
+}
+.news-title {
+      padding: 12px 30px;
+      background: #F9F9FA;
+      box-shadow: 0px 4px 4px rgba(107, 107, 107, 0.17);
+      border-radius: 2px;
+      &:active{
+            background: #7B1931;
+      }
+      &:not(:last-child){
+            margin-right: 40px;
+      }
+		// .news-title__wrap
+
+		&__wrap {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: flex-start;
+                  margin-bottom: 55px;
+		}
+            &__text{
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 20px;
+                  line-height: 23px;
+                  color: #001843;
+                  &:active{
+                        color: #fff;
+                  }
+            }
+}
+.news-content {
+
+		// .news-content__wrap
+
+		&__wrap {
+                  display: flex;
+                  column-gap: 30px;
+		}
+}
+.content-general {
+      display: flex;
+      flex-direction: column;
+      
+
+
+		// .content-general__item
+
+		&__item {
+                  display: flex;
+                  height: 100%;
+                  flex-direction: column;
+		}
+
+		// .content-general__picture
+
+		&__picture {
+                 line-height: 0;
+		}
+}
+.content-card {
+
+		// .content-card__wrap
+            
+		&__wrap {
+                  display: flex;
+                  flex-direction: column;
+                  padding: 25px 45px;
+                  background: #FCFCFC;
+                  flex-grow: 1;
+                  border: 1px solid #E2E2E2;
+                  &--height{
+                  height: 100%;
+            }
+		}
+
+		// .content-card__title
+
+		&__title {
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 20px;
+                  line-height: 23px;
+                  color: #001843;
+                  margin-bottom: 25px;
+		}
+
+		// .content-card__text
+
+		&__text {
+                  font-family: 'Helvetica';
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 16px;
+                  line-height: 18px;
+                  color: #4E4E4E;
+                  margin-bottom: 25px;
+		}
+
+		// .content-card__link
+
+		&__link {
+                  display: flex;
+                  flex-direction: row;
+                  align-items: center;
+                  &--text{
+                        font-family: 'Helvetica';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 16px;
+                        line-height: 18px;
+                        color: #454545;
+                        width: 140px;
+                  }
+		}
+}
+.card-link {
+
+		// .card-link__svg
+
+		&__svg {
+                  height: 15px;
+                  width: 10px;
+                  fill: #454545;
+		}
+}
+.content-rest {
+      display: flex;
+      flex-direction: column;
+      row-gap: 30px;
+}
+.content-double {
+      display: flex;
+      justify-content: space-between;
+		// .content-double__item
+
+		&__item {
+                  flex: 0 0 50%;
+		}
+
+		// .content-double__picture
+
+		&__picture {
+                  flex: 0 0 45%;
+                  align-self: flex-end;
+		}
+}
+.news-button {
+      display: flex;
+      flex: 0 0 45%;
+      background: linear-gradient(128.98deg, #801D23 -13.11%, #B9422B 155.05%);
+		// .news-button__svg
+            &__link{
+                  color: #fff;
+                  height: 100%;
+                  width: 100%;
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  &--text{
+                        margin-right: 45px;
+                        font-family: 'Helvetica';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 20px;
+                        line-height: 23px;
+                        color: #FFFFFF; 
+                  }
+            }
+		&__svg {
+                  width: 10px;
+                  height: 15px;
+		}
+}
+.content-simple {
+      display: flex;
+
+		// .content-simple__picture
+
+		&__picture {
+                  line-height: 0;
+		}
+
+		// .content-simple__item
+
+		&__item {
+                  height: 100%;
+		}
+}
+
