--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -28,6 +28,7 @@
 @import './client/safeboxes';
 @import './client/settlement-service';
 @import './client/contributions';
+@import './client/investment';
 @import './client/savingsaccount';
 @import './client/cards';
 @import './client/card';
