--- a/src/assets/scss/client/_contributions.scss
+++ b/src/assets/scss/client/_contributions.scss
@@ -91,7 +91,7 @@
 }
 .contributions-type {
 	display: flex;
-	// flex: 0 0 100%;
+	
 	justify-content: center;
 	margin:0 0 41px;
 	background: #FFFFFF;
@@ -99,19 +99,19 @@
 	box-shadow: 0px 4px 4px rgba(0, 32, 91, 0.15);
 	@media screen and (max-width:767px){
 		margin: 0 0 41px;
-		
 	}
 		// .contributions-type__picture
 
 		&__picture {
+			flex: 0 0 35%;
 			@media screen and (max-width:1199px){
 				width: 213px;
 			}
 			@media screen and (max-width:767px){
 				display: none;
 			}
-			.contributions__picture{    
-			display: flex;
+			.contributions__picture{ 
+				
 			}
 		}
 
