--- a/src/assets/scss/private/_vip-deposits.scss
+++ b/src/assets/scss/private/_vip-deposits.scss
@@ -89,7 +89,7 @@
                         // height: calc(1.25em + 20px);
                   }
                   &--min-size{
-                        width: min-content;
+                        // width: min-content;
                         @media screen and (max-width:768px){
                               width: 100%;
                               margin-bottom: 15px;
@@ -216,6 +216,7 @@
 		// .columns__item
 
 		&__item {
+			flex-grow: 1;
 		}
 }
 .btn {
